--- a/projects/demo/src/app/app.component.less
+++ b/projects/demo/src/app/app.component.less
@@ -5,8 +5,9 @@
     align-items: center;
 }
 
-.observer {
-    background: skyblue;
-    border-radius: 16px;
-    padding: 40px;
+.example {
+    min-width: 360px;
+    border-top: 1px solid gainsboro;
+    margin-top: 16px;
+    padding-top: 16px;
 }
